Resolve packaged Postgres runtime module
Signed-off-by: Arnab Nandy <arnab_nandy7@yahoo.com>